--- a/app/src/main/res/drawable/map_recyclerview_border.xml
+++ b/app/src/main/res/drawable/map_recyclerview_border.xml
@@ -11,6 +11,14 @@
                 android:width="1dp"
                 android:color="@color/gray100" />
         </shape>
-
+    </item>
+    <item>
+        <selector>
+            <item android:state_pressed="true">
+                <shape android:shape="rectangle">
+                    <solid android:color="@color/gray100" />
+                </shape>
+            </item>
+        </selector>
     </item>
 </layer-list>
