--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:orientation="vertical"
+        android:elevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -24,7 +25,7 @@
             android:gravity="center"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:lines="1"
             android:text="서울특별시 마포구 성산동"
             android:textColor="@color/black"
@@ -36,7 +37,7 @@
         android:id="@+id/map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="48dp" />
+        android:layout_marginTop="49dp" />
 
     <com.naver.maps.map.widget.LocationButtonView
         android:id="@+id/location"
