--- a/app/src/main/res/layout/item_aed.xml
+++ b/app/src/main/res/layout/item_aed.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="106dp"
     android:layout_marginHorizontal="24dp"
+    android:background="@drawable/map_recyclerview_border"
     android:paddingTop="16dp"
-    android:paddingBottom="12dp"
-    android:background="@drawable/map_recyclerview_border">
+    android:paddingBottom="16dp">
 
     <LinearLayout
         android:id="@+id/aedInfoText"
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             tools:text="공덕역" />
 
@@ -34,35 +34,43 @@
             android:id="@+id/address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            android:maxLines="2"
-            android:textColor="@color/black"
+            android:layout_marginTop="8dp"
+            android:maxLines="1"
+            android:textColor="@color/gray500"
             android:textSize="13sp"
-            android:textStyle="bold"
+            android:textStyle="normal"
             tools:text="서울특별시 마포구 성산로 128" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/addressDetail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
                 tools:text="5층 로비" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="12dp"
                 android:layout_marginHorizontal="10sp"
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:text="|" />
 
             <TextView
                 android:id="@+id/distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
                 tools:text="20m" />
 
         </LinearLayout>
@@ -86,6 +94,7 @@
             android:id="@+id/aedInfoButton1"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginEnd="6dp"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -100,14 +109,6 @@
                 android:background="@drawable/map_aed_button_click"
                 android:drawableStart="@drawable/map_call_symbol"
                 android:paddingLeft="12dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="@string/call"
-                android:textSize="10sp" />
-
 
         </LinearLayout>
 
@@ -129,13 +130,6 @@
                 android:background="@drawable/map_aed_button_click"
                 android:drawableLeft="@drawable/map_find_way"
                 android:paddingLeft="12dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="@string/findPath"
-                android:textSize="10sp" />
 
         </LinearLayout>
 
