--- a/app/src/main/res/layout/activity_earthquake.xml
+++ b/app/src/main/res/layout/activity_earthquake.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayoutEarthquake"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +8,9 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/earthquake_appbar"
         android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:gravity="center"
+        tools:text = "재난상황 대처 방법"
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
@@ -36,6 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:gravity="center_vertical"
+                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 style="@style/disaster"
                 android:text="@string/info_tb_earthquake"/>
             <Space
