--- a/app/src/main/res/layout/activity_cpr.xml
+++ b/app/src/main/res/layout/activity_cpr.xml
@@ -9,49 +9,74 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/cpr_appBar"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="182dp"
         android:background="#EDEDED">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/cpr_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:expandedTitleMarginEnd = "64dp"
-            app:expandedTitleMarginStart = "48dp"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/cpr_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"/>
+            android:layout_height="?attr/actionBarSize" />
 
-            <TextView
-                android:id="@+id/info_tv_cpr_headline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="76dp"
-                android:fontFamily="@font/spoqa_han_sans_neo_bold"
-                android:text="@string/info_tv_cpr_headline"
-                android:textColor="@color/gray600"
-                android:textSize="20sp"
-                app:layout_collapseMode="parallax" />
+        <!--        <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
+                    app:expandedTitleMarginEnd = "64dp"
+                    app:expandedTitleMarginStart = "48dp"
+                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+-->
 
-            <TextView
-                android:id="@+id/info_tv_cpr_desc"
-                android:layout_width="287dp"
-                android:layout_height="52dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="128dp"
-                android:fontFamily="@font/spoqa_han_sans_neo_regular"
-                android:text="@string/info_tv_cpr_desc"
-                android:textAppearance="@style/Body1_26"
-                android:textColor="@color/gray600"
-                android:textSize="16sp"
-                app:layout_collapseMode="parallax" />
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+        <TextView
+            android:id="@+id/info_tv_cpr_headline"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/spoqa_han_sans_neo_bold"
+            android:text="@string/info_tv_cpr_headline"
+            android:textColor="@color/gray600"
+            android:textSize="20sp"
+            app:layout_collapseMode="parallax" />
 
+        <!--        <TextView
+                    android:id="@+id/info_tv_cpr_desc"
+                    android:layout_width="287dp"
+                    android:layout_height="52dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="128dp"
+                    android:fontFamily="@font/spoqa_han_sans_neo_regular"
+                    android:text="@string/info_tv_cpr_desc"
+                    android:textAppearance="@style/Body1_26"
+                    android:textColor="@color/gray600"
+                    android:textSize="16sp"
+                    app:layout_collapseMode="parallax" />-->
 
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/cpr_tabLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="19dp"
+            android:background="#00FFFFFF"
+            app:tabGravity="center"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/gray600"
+            app:tabTextAppearance="@style/Body1"
+            app:tabTextColor="@color/gray400">
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="30dp"
+                android:layout_height="19dp"
+                android:text="@string/info_tb_adult"
+                tools:text="adult" />
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="58dp"
+                android:layout_height="19dp"
+                android:text="@string/info_tb_child"
+                tools:text="child" />
+        </com.google.android.material.tabs.TabLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
@@ -63,42 +88,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="80dp"
             android:orientation="vertical"
             android:padding="0dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="71dp"
-                android:background="#EDEDED"
-                android:orientation="horizontal"
-                android:padding="0dp">
-
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/cpr_tabLayout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="39dp"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginTop="32dp"
-                    android:background="#00FFFFFF"
-                    app:tabGravity="center"
-                    app:tabMode="fixed"
-                    app:tabSelectedTextColor="@color/gray600"
-                    app:tabTextAppearance="@style/Body1"
-                    app:tabTextColor="@color/gray400">
-
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="30dp"
-                        android:layout_height="19dp"
-                        android:text="@string/info_tb_adult"
-                        tools:text="adult" />
-
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="58dp"
-                        android:layout_height="19dp"
-                        android:text="@string/info_tb_child"
-                        tools:text="child" />
-                </com.google.android.material.tabs.TabLayout>
-            </LinearLayout>
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/cpr_viewPager"
