--- a/app/src/main/res/layout/activity_flood.xml
+++ b/app/src/main/res/layout/activity_flood.xml
@@ -2,11 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/flood_appbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:textAlignment="center"
+        app:titleCentered="true"
+        app:titleEnabled="true"
+        android:gravity="center"
+        android:padding="0dp"
+        tools:text = "재난상황 대처 방법"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
     </com.google.android.material.appbar.MaterialToolbar>
@@ -36,6 +43,7 @@
                 android:layout_height="38dp"
                 android:gravity="center_vertical"
                 style="@style/disaster"
+                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:text="@string/info_tb_flood"/>
             <Space
                 android:layout_width="match_parent"
