--- a/app/src/main/res/layout/activity_urban_fire.xml
+++ b/app/src/main/res/layout/activity_urban_fire.xml
@@ -2,12 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/urbanFire_appbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:textAlignment="center"
+        tools:text = "재난상황 대처 방법"
+        app:titleCentered="true"
+        app:titleEnabled="true"
+        android:gravity="center"
+        android:padding="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="38dp"
                 android:gravity="center_vertical"
+                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:text="@string/info_tb_fire" />
 
             <Space
