--- a/app/src/main/res/layout/fragment_on_boarding_four.xml
+++ b/app/src/main/res/layout/fragment_on_boarding_four.xml
@@ -55,13 +55,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/onBoarding_tv_slide_header4" />
 
-    <me.relex.circleindicator.CircleIndicator
+<!--    <me.relex.circleindicator.CircleIndicator3
         android:id="@+id/indicator"
-        android:layout_width="64dp"
-        android:layout_height="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        app:layout_constraintTop_toBottomOf="@id/onBoarding_tv_slide_body4"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/onBoarding_tv_slide_body4" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        />-->
     <ImageButton
         android:id="@+id/onboarding_ib_start"
         android:layout_width="80dp"
