--- a/app/src/main/res/layout/fragment_on_boarding_one.xml
+++ b/app/src/main/res/layout/fragment_on_boarding_one.xml
@@ -39,7 +39,7 @@
         android:layout_height="76dp"
         app:layout_constraintTop_toBottomOf="@id/onBoarding_iv"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:text="@string/tv_onBoarding1h"
+        android:text="@string/tvOnBoarding1h"
         android:fontFamily="@font/spoqa_han_sans_neo_regular"
         android:textFontWeight="400"
         android:lineSpacingExtra="10sp"
@@ -63,17 +63,17 @@
         android:text="@string/tv_onBoarding1b"
         android:textColor="@color/black"
         android:textFontWeight="400"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:translationY="-3.6sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/onBoarding_tv_slide_header" />
-    <me.relex.circleindicator.CircleIndicator
+<!--    <me.relex.circleindicator.CircleIndicator3
         android:id="@+id/indicator"
-        android:layout_width="64dp"
-        android:layout_height="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
         app:layout_constraintTop_toBottomOf="@id/onBoarding_tv_slide_body"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
