--- a/app/src/main/res/layout/fragment_on_boarding_two.xml
+++ b/app/src/main/res/layout/fragment_on_boarding_two.xml
@@ -49,17 +49,17 @@
         android:text="@string/tv_onBoarding2b"
         android:textColor="@color/black"
         android:textFontWeight="400"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:translationY="-3.6sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/onBoarding_tv_slide_header2" />
-    <me.relex.circleindicator.CircleIndicator
+<!--    <me.relex.circleindicator.CircleIndicator3
         android:id="@+id/indicator"
-        android:layout_width="64dp"
-        android:layout_height="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
         app:layout_constraintTop_toBottomOf="@id/onBoarding_tv_slide_body2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
