--- a/app/src/main/res/layout/fragment_on_boarding_one.xml
+++ b/app/src/main/res/layout/fragment_on_boarding_one.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/default_padding"
     tools:context=".onboarding.OnBoardingOne">
 
-    <Button
+<!--    <Button
         android:id="@+id/onBoarding_tb_skip"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
@@ -22,10 +22,10 @@
         android:textColor="@color/gray600"
         android:textSize="16sp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />-->
     <ImageView
         android:id="@+id/onBoarding_iv"
-        android:contentDescription="aed picture"
+        android:contentDescription="@string/aed_picture"
         android:layout_width="200dp"
         android:layout_height="197dp"
         android:src="@drawable/info_iv_aed_picture"
@@ -67,13 +67,6 @@
         android:translationY="-3.6sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/onBoarding_tv_slide_header" />
-<!--    <me.relex.circleindicator.CircleIndicator3
-        android:id="@+id/indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        app:layout_constraintTop_toBottomOf="@id/onBoarding_tv_slide_body"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />-->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
