--- a/app/src/main/res/layout/fragment_favorite_aed.xml
+++ b/app/src/main/res/layout/fragment_favorite_aed.xml
@@ -46,4 +46,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/favoriteAedTitle" />
 
+    <TextView
+        android:id="@+id/favoriteNoAedTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/default_padding"
+        android:gravity="center"
+        android:text="즐겨찾기 해놓은 심장충격기가 없습니다"
+        android:textColor="@color/gray400"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        tools:visibility="visible"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
