--- a/app/src/main/res/layout/fragment_checklist_mine.xml
+++ b/app/src/main/res/layout/fragment_checklist_mine.xml
@@ -43,8 +43,15 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ch_minerv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/list_checklist" />
+        android:layout_height="0dp"
+        android:layout_marginTop="24dp"
+        android:fillViewport="true"
+        android:overScrollMode="never"
+        tools:listitem="@layout/list_checklist"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageButton
         android:id="@+id/ch_mine_btn"
