--- a/app/src/main/res/layout/activity_cpr.xml
+++ b/app/src/main/res/layout/activity_cpr.xml
@@ -1,72 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".info.CprActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cpr_appBar"
         android:layout_width="match_parent"
         android:layout_height="182dp"
-        android:background="#EDEDED">
+        android:background="#4DEDEDED"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/cpr_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+            android:layout_height="?attr/actionBarSize"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-        <TextView
-            android:id="@+id/info_tv_cpr_headline"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/spoqa_han_sans_neo_bold"
-            android:text="@string/info_tv_cpr_headline"
-            android:textColor="@color/gray600"
-            android:textSize="20sp"
-            app:layout_collapseMode="parallax" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/default_padding"
+            android:paddingRight="@dimen/default_padding"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cpr_toolbar">
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/cpr_tabLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="56dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="19dp"
-            android:background="#00FFFFFF"
-            app:tabGravity="center"
-            app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/gray600"
-            app:tabTextAppearance="@style/Body1"
-            app:tabTextColor="@color/gray400">
+            <TextView
+                android:id="@+id/info_tv_cpr_headline"
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:layout_marginTop="80dp"
+                android:fontFamily="@font/spoqa_han_sans_neo_bold"
+                android:text="@string/info_tv_cpr_headline"
+                android:textColor="@color/gray600"
+                android:textSize="20sp" />
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="30dp"
-                android:layout_height="19dp"
-                android:text="@string/info_tb_adult"
-                tools:text="adult" />
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/cpr_tabLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="56dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="19dp"
+                android:background="#00FFFFFF"
+                app:tabGravity="center"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="@color/gray600"
+                app:tabTextAppearance="@style/Body1"
+                app:tabTextColor="@color/gray400">
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="58dp"
-                android:layout_height="19dp"
-                android:text="@string/info_tb_child"
-                tools:text="child" />
-        </com.google.android.material.tabs.TabLayout>
-    </com.google.android.material.appbar.AppBarLayout>
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="30dp"
+                    android:layout_height="19dp"
+                    android:text="@string/info_tb_adult"
+                    tools:text="adult" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="58dp"
+                    android:layout_height="19dp"
+                    android:text="@string/info_tb_child"
+                    tools:text="child" />
+            </com.google.android.material.tabs.TabLayout>
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="0dp"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+        android:layout_marginTop="24dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        app:layout_constraintTop_toBottomOf="@id/cpr_appBar">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_marginBottom="80dp"
             android:orientation="vertical"
             android:padding="0dp">
@@ -81,4 +97,4 @@
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
