--- a/app/src/main/res/layout/activity_forest_fire.xml
+++ b/app/src/main/res/layout/activity_forest_fire.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,7 +32,8 @@
         android:id="@+id/layout_scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/iv_bar_design">
+        app:layout_constraintTop_toBottomOf="@id/iv_bar_design"
+        app:layout_constraintLeft_toLeftOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,7 +46,8 @@
                 android:id="@+id/info_tv_forestfire_header"
                 style="@style/disaster"
                 android:layout_width="wrap_content"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="48dp"
                 android:gravity="center_vertical"
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:text="@string/info_tb_forrestfire" />
@@ -89,7 +92,8 @@
                 style="@style/disaster_body"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/info_tv_forrestfire_body2" />
+                android:text="@string/info_tv_forrestfire_body2"
+                android:layout_marginBottom="200dp"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
