--- a/app/src/main/res/layout/activity_typhoon.xml
+++ b/app/src/main/res/layout/activity_typhoon.xml
@@ -29,7 +29,8 @@
         android:id="@+id/layout_scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/iv_bar_design">
+        app:layout_constraintTop_toBottomOf="@id/iv_bar_design"
+        app:layout_constraintLeft_toLeftOf="parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,7 +40,8 @@
             <TextView
                 android:id="@+id/info_tv_typhoon_header"
                 android:layout_width="wrap_content"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="48dp"
                 android:gravity="center_vertical"
                 style="@style/disaster"
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
@@ -61,7 +63,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/disaster_body"
-                android:text="@string/info_tv_typhoon_body"/>
+                android:text="@string/info_tv_typhoon_body"
+                android:layout_marginBottom="200dp"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
